docs: update resource recommendations in deploying docs